--- a/src/tpl-index.html
+++ b/src/tpl-index.html
@@ -2,10 +2,25 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Angular Webpack ES6 Project</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Expenses</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+    .loading {
+        height: 100vh;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        font-size: 32px;
+    }
+    </style>
+
     {% for (var css in o.htmlWebpackPlugin.files.css) { %}
     <link href="{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
     {% } %}
@@ -14,14 +29,12 @@
     <script src="{%=o.htmlWebpackPlugin.files.chunks[chunk].entry %}" defer></script>
     {% } %}
 </head>
-<body>
-    <!--[if lt IE 10]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-    <div ui-view></div>
-
-    <footer-test></footer-test>
-
+<body ui-view>
+    <p class="loading">
+        Loading...
+        <noscript>
+            <br>JavaScript is required.
+        </noscript>
+    </div>
 </body>
 </html>
