--- a/src/tpl-index.html
+++ b/src/tpl-index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Expenses</title>
+    <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Expenses</title>
 
     <style>
     .loading {
