--- a/src/tpl-index.html
+++ b/src/tpl-index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Expenses</title>
+  <title>Coins</title>
 
   <style>
     .loading {
